[package]
name = "lines-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13"
actix-files = "0.6"
actix-web-actors = "4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
